[✨Feat]: 아코디언 기능 구현
- 아코디언 토글 기능
- 후기, 문의 토글

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -151,7 +151,7 @@
                   </div> -->
                 </dl>
               </div>
-              <div class="info_flex font-semibold">
+              <div class="font-semibold info_flex">
                 <p class="min-w-32">상품선택</p>
                 <div
                   class="p-3 border border-gray-200 w-432pxr product_select_name"
@@ -167,7 +167,7 @@
                           class="cursor-pointer quantity_decrease"
                         />
                       </button>
-                      <span class="product_quantity w-3 text-center">1</span>
+                      <span class="w-3 text-center product_quantity">1</span>
                       <button>
                         <img
                           src="/public/input/plus.svg"
@@ -184,13 +184,13 @@
               </div>
             </div>
 
-            <div class="gap-2 my-7 flex_column items-end justify-end">
+            <div class="items-end justify-end gap-2 my-7 flex_column">
               <p
                 class="flex items-center justify-end font-semibold text-heading-medium"
               >
                 <!-- 수량 별~~ 구현하기 -->
                 총 상품 금액 :
-                <strong class="total_price pl-6 pr-1 text-label-xl">
+                <strong class="pl-6 pr-1 total_price text-label-xl">
                   <!-- 29,800 -->
                 </strong>
                 <span class="pl-2 ml-2 font-bold">원</span>
@@ -209,7 +209,7 @@
             <div class="flex items-start gap-3">
               <button class="wish_list" data-wish="false">
                 <svg
-                  class="text-primary cursor-pointer icon_box_gray h-14 w-14"
+                  class="cursor-pointer text-primary icon_box_gray h-14 w-14"
                   aria-hidden="true"
                 >
                   <use
@@ -694,8 +694,6 @@
                   <div class="table_width100">-</div>
                 </button>
               </h2>
-
-              <!-- 내용 -->
               <div class="inquiry_content" aria-hidden="true" hidden>
                 <!-- question -->
                 <div class="question inquiry_contents_layout">
@@ -758,8 +756,6 @@
                   <div class="table_width100">답변대기</div>
                 </button>
               </h2>
-
-              <!-- 내용 -->
               <div class="inquiry_content" aria-hidden="true" hidden>
                 <!-- question -->
                 <div class="question inquiry_contents_layout">
@@ -833,8 +829,6 @@
                   </div>
                 </button>
               </h2>
-
-              <!-- 내용 -->
               <div class="inquiry_content" aria-hidden="true" hidden>
                 <!-- question -->
                 <div class="question inquiry_contents_layout">
