[✨Feat]: cart.js 수량 증감 버튼 기능 구현
cart.js
- 수량 증감 버튼 기능 구현
- 수량에 따른 버튼 배경이미지 변경

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="swiper2 w-[1050px] h-516pxr">
           <ul
-            class="recommended_product_list flex items-start justify-between w-full list-none swiper-wrapper"
+            class="flex items-start justify-between w-full list-none recommended_product_list swiper-wrapper"
           >
             <!-- <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
@@ -361,7 +361,7 @@
         </div>
         <div class="swiper3 w-[1050px] h-516pxr">
           <ul
-            class="cheap_product_list flex items-start justify-between w-full list-none swiper-wrapper"
+            class="flex items-start justify-between w-full list-none cheap_product_list swiper-wrapper"
           >
             <!-- <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
