[✨Feat]: cart.js 카테고리가 hidden 상태일 때 전체선택 클릭 시 이벤트
cart.js
- 장바구니 상품 카테고리가 hidden 상태일 때 전체선택 클릭 시 리스트에 hidden이 모두 제거되며 보여짐

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -277,7 +277,7 @@
                       </svg>
                     </button>
                   </div>
-                  <ul class="product_refrigerated product_list active:hidden">
+                  <ul class="product_refrigerated product_list">
                     <li class="flex items-center py-5">
                       <fieldset class="item_select">
                         <input
@@ -377,7 +377,7 @@
                       </svg>
                     </button>
                   </div>
-                  <ul class="product_frozen product_list active:hidden">
+                  <ul class="product_frozen product_list">
                     <li class="flex items-center py-5">
                       <fieldset class="item_select">
                         <input
