[✨Feat]: cart.js 체크된 체크박스 수, 전체 리스트 수 보이는 기능 구현
cart.js
- 체크된 체크박스 수, 전체 리스트 수 보이는 기능 구현

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -64,8 +64,15 @@
                 <label
                   for="itemAllSelect"
                   class="item_all_select checkbox_before_label"
-                  >전체선택 (3/3)</label
-                >
+                  >전체선택 
+                  <span class="check_number">
+                    (
+                      <span class="checked_count">0</span>
+                      /
+                      <span class="all_check_count">0</span>
+                    )
+                  </span>
+                </label>
               </fieldset>
               <span class="w-[1px] h-[13px] block bg-gray-200 mx-2"></span>
               <button class="item_select_delete">선택삭제</button>
@@ -110,7 +117,7 @@
                     </button>
                   </div>
                   <ul class="product_frozen product_list">
-                    <li class="flex items-center py-5">
+                    <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
@@ -178,7 +185,7 @@
                         </svg>
                       </button>
                     </li>
-                    <li class="flex items-center py-5">
+                    <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
@@ -278,7 +285,7 @@
                     </button>
                   </div>
                   <ul class="product_refrigerated product_list">
-                    <li class="flex items-center py-5">
+                    <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
@@ -378,7 +385,7 @@
                     </button>
                   </div>
                   <ul class="product_frozen product_list">
-                    <li class="flex items-center py-5">
+                    <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
@@ -462,8 +469,15 @@
                 <label
                   for="itemAllSelect2"
                   class="item_all_select checkbox_before_label"
-                  >전체선택 (3/3)</label
-                >
+                  >전체선택 
+                  <span class="check_number">
+                    (
+                      <span class="checked_count">0</span>
+                      /
+                      <span class="all_check_count">0</span>
+                    )
+                  </span>
+                </label>
               </fieldset>
               <span class="w-[1px] h-[13px] block bg-gray-200 mx-2"></span>
               <button class="item_select_delete">선택삭제</button>
