[♻️Refactor]: public 경로 수정
- /public/ 적혀있던 경로 수정

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -162,7 +162,7 @@
                     <div class="flex items-center gap-2 border border-gray-200">
                       <button>
                         <img
-                          src="/public/input/minus-disabled.svg"
+                          src="/input/minus-disabled.svg"
                           alt="수량 감소 비활성화"
                           class="cursor-pointer quantity_decrease"
                         />
@@ -170,7 +170,7 @@
                       <span class="w-3 text-center product_quantity">1</span>
                       <button>
                         <img
-                          src="/public/input/plus.svg"
+                          src="/input/plus.svg"
                           alt="수량 증가"
                           class="cursor-pointer quantity_increase"
                         />
@@ -212,10 +212,7 @@
                   class="cursor-pointer text-primary icon_box_gray h-14 w-14"
                   aria-hidden="true"
                 >
-                  <use
-                    href="/public/icon/_sprite.svg#Heart"
-                    class="icon_heart"
-                  ></use>
+                  <use href="/icon/_sprite.svg#Heart" class="icon_heart"></use>
                 </svg>
                 <span class="sr-only">찜하기</span>
               </button>
@@ -224,7 +221,7 @@
                   class="text-gray-100 icon_box_gray h-14 w-14 cursor-no-drop"
                   aria-hidden="true"
                 >
-                  <use href="/public/icon/_sprite.svg#Bell"></use>
+                  <use href="/icon/_sprite.svg#Bell"></use>
                 </svg>
                 <span class="sr-only">재입고 알림 신청</span>
               </button>
@@ -359,7 +356,7 @@
             <div class="flex justify-center">
               <article class="why_article">
                 <svg class="why_article_img_size" aria-hidden="true">
-                  <use href="/public/icon/_sprite.svg#Committee"></use>
+                  <use href="/icon/_sprite.svg#Committee"></use>
                 </svg>
                 <h4 class="why_article_title">깐깐한 상품위원회</h4>
                 <p class="text-center">
@@ -371,7 +368,7 @@
               </article>
               <article class="why_article">
                 <svg class="why_article_img_size" aria-hidden="true">
-                  <use href="/public/icon/_sprite.svg#Different"></use>
+                  <use href="/icon/_sprite.svg#Different"></use>
                 </svg>
                 <h4 class="why_article_title">차별화된 Karly Only 상품</h4>
                 <p class="text-center">
@@ -383,7 +380,7 @@
               </article>
               <article class="why_article">
                 <svg class="why_article_img_size" aria-hidden="true">
-                  <use href="/public/icon/_sprite.svg#Delivery"></use>
+                  <use href="/icon/_sprite.svg#Delivery"></use>
                 </svg>
                 <h4 class="why_article_title">신선한 풀콜드체인 배송</h4>
                 <p class="text-center">
@@ -397,7 +394,7 @@
             <div class="flex justify-center gap-4">
               <article class="why_article">
                 <svg class="why_article_img_size" aria-hidden="true">
-                  <use href="/public/icon/_sprite.svg#Price"></use>
+                  <use href="/icon/_sprite.svg#Price"></use>
                 </svg>
                 <h4 class="why_article_title">
                   고객, 생산자를 위한 최선의 가격
@@ -412,7 +409,7 @@
               </article>
               <article class="why_article">
                 <svg class="why_article_img_size" aria-hidden="true">
-                  <use href="/public/icon/_sprite.svg#Enviroment"></use>
+                  <use href="/icon/_sprite.svg#Enviroment"></use>
                 </svg>
                 <h4 class="why_article_title">
                   환경을 생각하는 지속 가능한 유통
@@ -584,7 +581,7 @@
                 height="48"
                 aria-hidden="true"
               >
-                <use href="/public/icon/_sprite.svg#Notice"></use>
+                <use href="/icon/_sprite.svg#Notice"></use>
               </svg>
               <p>따뜻한 첫 후기를 기다리고 있어요.</p>
             </div> -->
@@ -616,7 +613,7 @@
                 viewBox="0 0 18 18"
                 aria-hidden="true"
               >
-                <use href="/public/icon/_sprite.svg#Left"></use>
+                <use href="/icon/_sprite.svg#Left"></use>
               </svg>
               <span class="sr-only">이전 페이지</span>
             </button>
@@ -628,7 +625,7 @@
                 viewBox="0 0 18 18"
                 aria-hidden="true"
               >
-                <use href="/public/icon/_sprite.svg#Right"></use>
+                <use href="/icon/_sprite.svg#Right"></use>
               </svg>
               <span class="sr-only">다음 페이지</span>
             </button>
@@ -699,7 +696,7 @@
                 <div class="question inquiry_contents_layout">
                   <span>
                     <svg width="24" height="24" aria-hidden="true">
-                      <use href="/public/icon/_sprite.svg#Question"></use>
+                      <use href="/icon/_sprite.svg#Question"></use>
                     </svg>
                   </span>
                   <p class="inquiry_contents_question">
@@ -711,7 +708,7 @@
                 <div class="answer inquiry_contents_layout">
                   <span>
                     <svg width="24" height="24" aria-hidden="true">
-                      <use href="/public/icon/_sprite.svg#Answer"></use>
+                      <use href="/icon/_sprite.svg#Answer"></use>
                     </svg>
                   </span>
                   <div class="inquiry_contents_answer">
@@ -761,7 +758,7 @@
                 <div class="question inquiry_contents_layout">
                   <span>
                     <svg width="24" height="24" aria-hidden="true">
-                      <use href="/public/icon/_sprite.svg#Question"></use>
+                      <use href="/icon/_sprite.svg#Question"></use>
                     </svg>
                   </span>
                   <p class="inquiry_contents_question">
@@ -773,7 +770,7 @@
                 <div class="answer inquiry_contents_layout">
                   <span>
                     <svg width="24" height="24" aria-hidden="true">
-                      <use href="/public/icon/_sprite.svg#Answer"></use>
+                      <use href="/icon/_sprite.svg#Answer"></use>
                     </svg>
                   </span>
                   <div class="inquiry_contents_answer">
@@ -815,7 +812,7 @@
                     또 터졌어
                     <!-- <span>
                       <svg width="12" height="14" aria-hidden="true">
-                        <use href="/public/icon/_sprite.svg#Lock"></use>
+                        <use href="/icon/_sprite.svg#Lock"></use>
                       </svg>
                     </span> -->
                   </div>
@@ -834,7 +831,7 @@
                 <div class="question inquiry_contents_layout">
                   <span>
                     <svg width="24" height="24" aria-hidden="true">
-                      <use href="/public/icon/_sprite.svg#Question"></use>
+                      <use href="/icon/_sprite.svg#Question"></use>
                     </svg>
                   </span>
                   <p class="inquiry_contents_question">
@@ -846,7 +843,7 @@
                 <div class="answer inquiry_contents_layout">
                   <span>
                     <svg width="24" height="24" aria-hidden="true">
-                      <use href="/public/icon/_sprite.svg#Answer"></use>
+                      <use href="/icon/_sprite.svg#Answer"></use>
                     </svg>
                   </span>
                   <div class="inquiry_contents_answer">
@@ -886,7 +883,7 @@
                 viewBox="0 0 18 18"
                 aria-hidden="true"
               >
-                <use href="/public/icon/_sprite.svg#Left"></use>
+                <use href="/icon/_sprite.svg#Left"></use>
               </svg>
               <span class="sr-only">이전 페이지</span>
             </button>
@@ -898,7 +895,7 @@
                 viewBox="0 0 18 18"
                 aria-hidden="true"
               >
-                <use href="/public/icon/_sprite.svg#Right"></use>
+                <use href="/icon/_sprite.svg#Right"></use>
               </svg>
               <span class="sr-only">다음 페이지</span>
             </button>
