[✨Feat]: 로그인 시, 적립
- 로그인 시 적립 표시 변경

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -38,6 +38,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script type="module" src="./productDetail.js"></script>
     <script type="module" src="./accordionToggle.js"></script>
+    <script type="module" src="./accumulatePoints.js"></script>
     <script type="module" src="../../js/include.js"></script>
   </head>
   <body>
@@ -83,7 +84,9 @@
                 </p> -->
               </div>
               <!-- point -->
-              <p class="font-semibold text-primary text-label-medium">
+              <p
+                class="font-semibold text-primary text-label-medium login_point"
+              >
                 로그인 후, 적립 혜택이 제공됩니다.
               </p>
             </div>
@@ -202,7 +205,9 @@
                 >
                   적립
                 </span>
-                <span class="text-label-medium">로그인 후, 적립 혜택 제공</span>
+                <span class="text-label-medium login_point"
+                  >로그인 후, 적립 혜택 제공</span
+                >
               </p>
             </div>
 
